// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/ContentSidebar/SidebarFileProperties should render an error 1`] = `
<React.Fragment>
  <InlineError
    title={
      <FormattedMessage
        defaultMessage="baz"
        description="bar"
        id="foo"
      />
    }
  >
    <FormattedMessage
      defaultMessage="baz"
      description="bar"
      id="foo"
    />
  </InlineError>
  <SidebarFileProperties
    intl={
      Object {
        "formatDate": [Function],
        "formatMessage": [Function],
      }
    }
  />
</React.Fragment>
`;

exports[`components/ContentSidebar/SidebarFileProperties should render classification information 1`] = `
<ItemProperties
  classificationProps={
    Object {
      "openModal": [MockFunction],
      "value": "Public",
    }
  }
  createdAt="foo"
  description="foo"
  modifiedAt="foo"
  onDescriptionChange={[MockFunction]}
  owner="foo"
  size="1 B"
  uploader="foo"
/>
`;

exports[`components/ContentSidebar/SidebarFileProperties should render the versions when total_count > 0 1`] = `
<ItemProperties
  classificationProps={Object {}}
  createdAt="foo"
  description="foo"
  modifiedAt="foo"
  onDescriptionChange={[MockFunction]}
  owner="foo"
  size="1 B"
  uploader="foo"
/>
`;
